# ai_created_tools

./: .env.example  .gitignore  CONFIG.md  Cursor技术与产品演进白皮书（2023–2025）.md  README.md
.cursor/rules/: commands.mdc  github.mdc  python.mdc  report.mdc
PPT/: .gitignore  README.md  pyproject.toml  requirements.txt
PPT/src/: llm_service.py  main.py  models.py  ppt_renderer.py
common/: config_loader.py  llm.py
get_agent_news/: .gitignore  README.md  config.py  pyproject.toml  re.txt  输出格式要求.md
get_agent_news/configs/: sources.yaml  sources_all.text
get_agent_news/src/: config.py  main.py  models.py
get_agent_news/src/llm/: deepseek_client.py
get_agent_news/src/pipelines/: analyze.py  deduplicate.py  markdown_export.py  markdown_index.py  normalize.py  rank.py
get_agent_news/src/sources/: aibase_daily.py  common.py  rss_adapter.py  web_adapter.py  wechat_adapter.py
get_agent_news/src/storage/: file_stats.py  file_storage.py
get_agent_news/src/tools/: date_structure.py  nested.py  peek_files.py  slugify.py
get_blog_posts/: README.md  config.py  requirements.txt
get_blog_posts/configs/: blogs.yaml
get_blog_posts/src/: __init__.py  crawler.py  main.py  models.py
get_paper/: README.md  requirements.txt
get_paper/src/: monthly_run.py  (+1 more)
get_sdk_release_change_log/: README.md  config.py  repositories.yaml  requirements.txt
openspec/: project.md
report/: README.md  image_generator.py  insights.py  main.py  models.py  processors.py  readers.py  report_writer.py  runners.py  stats.py  utils.py
svg_generator/: README.md  __init__.py  requirements.txt
(+116 files in other folders)
